fixed scrollbar in menu

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,12 +8,15 @@
   background: $background-color;
   scroll-behavior: smooth;
 
+
   &__body {
     font-family: Inter, sans-serif;
     font-weight: 400;
     margin: 0;
     color: $text-color;
-
   }
 }
 
+.page:has(.header__cover--top--nav:target) {
+  overflow: hidden;
+}
